feat: update reservation logic and documentation